check valid link

--- a/views/index.html
+++ b/views/index.html
@@ -13,9 +13,9 @@
     <title>Scan Scrapper</title>
   </head>
   <body>
-    Title: <input id="title"/>
+    Lien: <input id="link"/><button type="button" id="btn">Chargé le lien</button>
     <p>👋</p>
-    <p id="info"></p>
+    <p  id="response"></p>
     <script src="../scripts/renderer.js"></script>
   </body>
 </html>
