--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
@@ -14,7 +10,7 @@
   </head>
   <body>
     Lien: <input id="link"/><button type="button" id="btn">Chargé le lien</button>
-    <p  id="response"></p>
+    <div id="response"></div>
     <script src="../scripts/renderer.js"></script>
   </body>
 </html>
