--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <!-- TODO fix le path du site
+      <meta
+        http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; img-src https://i2.wp.com/sushiscan.su"
+      />
+    -->
     <meta
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
