--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,17 @@
     <title>Scan Scrapper</title>
   </head>
   <body>
+    <div>
+      <p>Liste des liens supporter</p>
+      <ul>
+        <li>https://sushiscan.su/manga/NomManga/</li>
+        <li>https://sushiscan.su/manga/NomManga</li>
+        <li>https://sushiscan.su/NomManga/</li>
+        <li>https://sushiscan.su/NomManga</li>
+        <li>sushiscan.su/NomManga/</li>
+        <li>sushiscan.su/NomManga</li>
+      </ul>
+    </div>
     Lien: <input id="link"/><button type="button" id="btn">Chargé le lien</button>
     <div id="response"></div>
     <script src="../scripts/renderer.js"></script>
