--- a/views/index.html
+++ b/views/index.html
@@ -16,15 +16,8 @@
   </head>
   <body>
     <div>
-      <p>Liste des liens supporter</p>
-      <ul>
-        <li>https://sushiscan.su/manga/NomManga/</li>
-        <li>https://sushiscan.su/manga/NomManga</li>
-        <li>https://sushiscan.su/NomManga/</li>
-        <li>https://sushiscan.su/NomManga</li>
-        <li>sushiscan.su/NomManga/</li>
-        <li>sushiscan.su/NomManga</li>
-      </ul>
+      <p><h4>Support des liens : </h4>[https://]sushiscan.su[/manga]/NomDuManga[/]</p>
+      <p>Les elements [] sont optionnels</p>
     </div>
     Lien: <input id="link"/><button type="button" id="btn">Chargé le lien</button>
     <div id="response"></div>
