--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
         content="default-src 'self'; script-src 'self'; img-src https://i2.wp.com/sushiscan.su"
       />
     -->
+    <link rel="stylesheet" type="text/css" href="./ressources/stylesheet.css"> 
     <meta
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
@@ -19,7 +20,7 @@
       <p><h4>Support des liens : </h4>[https://]sushiscan.su[/manga]/NomDuManga[/]</p>
       <p>Les elements [] sont optionnels</p>
     </div>
-    Lien: <input id="link"/><button type="button" id="btn">Chargé le lien</button>
+    Lien: <input id="link"/><button type="button" id="btn">Scrap le manga</button>
     <div id="response"></div>
     <script src="../scripts/renderer.js"></script>
   </body>
